layout issues in hierarchy editor fixed
--HG--
extra : amend_source : b594639c06015e0ef748f69a6f19109d308cccb0

--- a/app/assets/stylesheets/layers.css.scss
+++ b/app/assets/stylesheets/layers.css.scss
@@ -14,7 +14,7 @@
   bottom: 16px;
 }
 
-.hierarchy-container {
+.hierarchy-viewer  {
   padding: 10px;
 
   .filter-header {
